--- a/zones/cluster.ws.yaml
+++ b/zones/cluster.ws.yaml
@@ -302,3 +302,4 @@ sweet: [ns1.afraid.org, ns2.afraid.org, ns3.afraid.org, ns4.afraid.org]
 pocholo: [ns1.afraid.org, ns2.afraid.org, ns3.afraid.org, ns4.afraid.org]
 urayoru: [ns1.afraid.org, ns2.afraid.org, ns3.afraid.org, ns4.afraid.org]
 munt: [ns1.afraid.org, ns2.afraid.org, ns3.afraid.org, ns4.afraid.org]
+aliszn: [ns01.000webhost.com, ns02.000webhost.com]
